# rlm-experimental

./: .env.example  .gitignore  README.md  config.json  main.py  pyproject.toml
docker/: .dockerignore  Dockerfile
docs/: codebase_overview.md
eval/: test.txt
eval/coding_eval/: README.md
eval/coding_eval/answers/: grading_guide.md
eval/coding_eval/repo/: README.md
eval/coding_eval/repo/app/: api.py  clients.py  core.py  jobs.py  models.py  repositories.py  services.py
eval/coding_eval/repo/config/: settings.py
eval/coding_eval/repo/docs/: incidents.md
eval/coding_eval/repo/tests/: test_regressions.py
eval/coding_eval/tasks/: 01_duplicate_charge.md  02_report_leak.md  03_logout_all.md  04_month_close_drift.md
rlm/cli/: __init__.py  cli.py
rlm/config/: __init__.py  config.py
rlm/orchestrator/: __init__.py  memory_compaction.py  orchestrator.py  prompt.txt
rlm/orchestrator/tools/: __init__.py  docker_runner.py
rlm/repl/: rlm_repl.py
rlm/tracing/: __init__.py  schema.py  writer.py
rlm/utils/: console.py
test/: test.txt  test_llm_query.py
